--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pycparser==2.22
 pydyf==0.11.0
 pyphen==0.17.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 pytz==2025.1
 six==1.17.0
 sqlparse==0.5.0
@@ -20,4 +21,5 @@ tinyhtml5==2.0.0
 tzdata==2024.1
 weasyprint==64.0
 webencodings==0.5.1
+whitenoise==6.11.0
 zopfli==0.2.3.post1
