--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@ Brotli==1.1.0
 cffi==1.17.1
 cssselect2==0.7.0
 Django==5.0.4
+django-meta==2.5.0
 fonttools==4.56.0
+gunicorn==23.0.0
 numpy==2.2.2
+packaging==25.0
 pandas==2.2.3
 pillow==11.1.0
 psycopg2-binary==2.9.10
